--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
         </div>
       </div>
     </div>
-
-  <img src="pics/home-img.png" class="big-pic" style="height: 95vh">
+    <img src="pics/home-img.png" class="big-pic" style="height: 95vh">
   </div>
 
 
@@ -96,7 +95,6 @@ $('#footer').load('http://emilyporat.com/footer.html');
         </div>
       </div>
     </div>
-
     <img src="pics/complexity.png" class="big-pic" style="height: 95vh">
   </div>
 
@@ -105,13 +103,11 @@ $('#footer').load('http://emilyporat.com/footer.html');
       <div class="title">
         <div>
           <h4>Get in touch</h4>
-          <h2>Connect with me on <a style="color:white" href="https://www.linkedin.com/in/emilyporat/" target="_blank">LinkedIn</a> or shoot me an email directly.</h2>
-          <button class="btn" onclick="location.href='mailto:emporat@gmail.com';" value="Send me an email"; target="_blank">Email Me</button>
+          <h2>Want to chat? Connect with me on <a style="color:white" href="https://www.linkedin.com/in/emilyporat/" target="_blank">LinkedIn</a> or shoot me an email.</h2>
+          <button class="secondary-btn" onclick="location.href='mailto:emporat@gmail.com';" value="Send me an email"; target="_blank">Email Me</button>
         </div>
       </div>
     </div>
-
-<!--     <img src="pics/HUD_ds.png" class="big-pic"> -->
   </div>
 
 
