--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
             <div>
               <h1 style="color: white">Projects</h1>
               <div class="short-divider" style="background-color: var(--purple)"></div>
-              <h3 style="color: white">From custom enterprise systems to public-facing dot gov rebrands, I’ve done a little bit of everything.</h3>
+              <h3 style="color: white">Since many of my projects are with government clients, I can't show all work publicly. Shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> for more details + case studies.</h3>
             </div>
           </div>
         </div>
@@ -55,7 +55,7 @@
 
 
   <!-- Featured project -->
-  <div class="section-large" style="background-color: var(--purple);">
+<!--   <div class="section-large" style="background-color: var(--purple);">
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Health</h4>
       <h2>Health Nonprofit Discovery</h2>
@@ -65,15 +65,15 @@
       </button>
     </div>
     <img class="project-pic-large" src="pics/EF.png" alt="A screenshot of the HUD style guide">
-  </div>
+  </div> -->
 
   <div class="section-large" style="background-color: var(--green);">
     <div class="project-info-large">
-      <h4 style="margin-bottom: 10px;">2020 - 2021 • Deloitte Digital • Housing</h4>
+      <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Housing</h4>
       <h2>Federal Design System</h2>
-      <h3>I conducted a component audit of existing high-fidelity mockups. From there, I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</h3>
+      <h3>I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</h3>
       <button id="myBtn" onclick="location.href='hud.html';" value="Go to HUD deisgn system project page">
-        <h4><i class="fas fa-lock"></i> Learn More</h4>
+        <h4></i> Learn More</h4>
       </button>
     </div>
     <img class="project-pic-large" src="pics/HUD_ds.png" alt="A screenshot of the HUD style guide">
@@ -81,7 +81,7 @@
 
   <div class="section-large" style="background-color: var(--pink);">
     <div class="project-info-large">
-      <h4 style="margin-bottom: 10px;">2020 - 2021 • Deloitte Digital • Housing</h4>
+      <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Housing</h4>
       <h2>Federal Website Redesign</h2>
       <h3>I co-led the redesign and launch of an consumer-facing site that serves over 8 million single family homeowners.</h3>
       <button id="myBtn" onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
@@ -94,9 +94,9 @@
     <!-- Featured project -->
     <div class="section-large" style="background-color: var(--orange)">
       <div class="project-info-large">
-        <h4 style="margin-bottom: 10px;">2019 - 2020 • Deloitte Digital • Food & Nutrition</h4>
-        <h2>Federal Food Management System</h2>
-        <h3>I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
+        <h4 style="margin-bottom: 10px;">2020 • Deloitte Digital • Food & Nutrition</h4>
+        <h2>Food Management System</h2>
+        <h3>I designed the inventory management & POS system that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
         <button id="myBtn" onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
           <h4><i class="fas fa-lock"></i> Learn More</h4>
         </button>
