--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
           <h2>What I Do</h2>
           <h3>
             I live in Washington DC and work at Deloitte Digital, primarily with federal government clients.
-          <h3>
+          </h3>
           <div class="short-divider"></div>
           <p> 
             I take pride in the mission-oriented work my job affords me: a lot of our projects center around improving technology systems for aid programs. My work has supported those seeking food secruity, affordable housing, emergency management, and more. 
@@ -69,18 +69,24 @@
 
         <div class="context-specifics">
           <h4>UX Research</h4>
-          <div class="context-description"><p>Scripting + Running Contextual Inquiry/Interviews, Usability Testing, Affinity Diagramming, Journey Mapping, Persona Development</p></div>
+          <div class="context-description"><p>Scripting + Running Contextual Inquiry/Interviews, Usability Testing, Affinity Diagramming, Journey Mapping, Persona Development, Modes & Mindsets</p></div>
           <h4>UX Design</h4>
           <div class="context-description"><p>Wireframing/Rapid Prototyping, Information Architecture</p></div>
           <h4>UI Design</h4> 
           <div class="context-description"><p>Design Systems, Component Audits, Basic Visual Design: layout/grid, typography, color theory, etc.</p></div>
-          <h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract, Anima, Miro/Mural/Freehand</p></div>
+          <h4>Tools I Use</h4><div class="context-description"><p>Sketch, InVision, Figma, Abstract, Anima, Miro, Mural</p></div>
         </div>
       </div>
 
-      <div class="divider"></div>
+  <div class="full-width-mid-page" style="margin-bottom: 0">
+    <div class="panel dark" style="background-color: var(--mediumgray);">
+      <h2 style="padding-top: 5%;">Education + Experience</h2>
+      <img style="padding-top: 5%" class="pic-left" src="pics/timeline.png">
+    </div>
+  </div>
 
-        <div id="about" class="body right">
+
+<!--         <div id="about" class="body right">
 
             <h3>Skills + Strengths</h3>
             <p>I do a little bit of everything, but I am most drawn towards the synthesis & organizational elements of UX. I like making sense of things. I like spreadsheets. My fridge is color-coded (jk, but you get the picture). In practice, this applies to a couple different areas. First, I love translating raw data into actionable insights and solutions, and I can do that best when I'm most involved in the early research stages and initial design + strategy stages of a project. I also enjoy the other end of the spectrum - working with design systems and organizing component libraries. I've found that my type-A tendencies tend to complement my more right-brained colleagues in these areas.</p>
@@ -98,13 +104,12 @@
               <p>I'm originally from Mountain View, California, where I grew up beliving it was normal for houses to cost $2M and for Google to be in your backyard (spoiler alert, it's not!). My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't journalism (my other passion in high school).</p>
               <p>After high school, I decided to leave sunny CA and move across the country to Pittsburgh, PA to attend Carnegie Mellon University. During my first two years at CMU, I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I 1) wasn't that great at coding and 2) cared significantly more about *why* digital products work for users than *how* they work in the backend. Throughout my junior year, I found my HCI classes much more engaging and fun, so I decided to shift my focus towards UX.</p>
               <p>These days, in my free time, I like to lift weights, bake sourdough bread, and hang out with my two cats.</p>
-<!--               <img class="pic-left" src="pics/about/cats-bread.png"> -->
-               <div class="space"></div>
-              </div>
-            </div>
-      </div> 
-      <div id="footer"></div>
-      </meta>
-    </body>
-  <script src="js/general.js"></script>
+              <img class="pic-left" src="pics/about/cats-bread.png">
+          </div>  -->
+        </div>
+    </div> 
+  <div id="footer"></div>
+  </meta>
+</body>
+<script src="js/general.js"></script>
 </html>
