changed footer link size

--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
     <div id="footer-links">
       <div class="contact-text">
         <h3 style="color: white">Projects</h3>
-          <p><a href="ef.html">Nonprofit Discovery</a></p>
+<!--           <p><a href="ef.html">Nonprofit Discovery</a></p> -->
           <p><a href="hud.html">Federal Design System</a></p>
           <p><a href="fha.html">Federal Website Redesign</a></p>
           <p><a href="fms-pos.html">Food Management System</a></p>
