--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
 		<a class="nav-item" id="home-nav-item" href="projects.html"><h4>Projects</h4></a>
 		<a class="nav-item" id="home-nav-item" href="about.html"><h4>About</h4></a>
 		<a class="nav-item" id="home-nav-item" href="resume.pdf" target="_blank" onclick="toggleNav()"><h4>Résumé</h4></a>
-		<a class="nav-item" id="home-nav-item" href="mailto:emporat@gmail.com" value="Send me an email" target="_blank">Contact</a>
+<!-- 		<a class="nav-item" id="home-nav-item" href="mailto:emporat@gmail.com" value="Send me an email" target="_blank">Contact</a> -->
 	</div>
 	<div id="hamburger" class="fas fa-bars" onclick="toggleNav()"></div>
 </header>
