fixed homepage section heights

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 
         <div class="context-specifics">
           <h4>UX Research</h4>
-          <div class="context-description"><p>Scripting + Running Contextual Inquiry/Interviews, Usability Testing, Affinity Diagramming, Journey Mapping, Persona Development, Modes & Mindsets</p></div>
+          <div class="context-description"><p>Interviews, Usability Testing, Affinity Diagramming, Journey Mapping, Persona Development, Modes & Mindsets</p></div>
           <h4>UX Design</h4>
           <div class="context-description"><p>Wireframing/Rapid Prototyping, Information Architecture</p></div>
           <h4>UI Design</h4> 
