--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 
   <div class="full-width" id="summary" style="background-color: var(--purple); margin-top: 0px; margin-bottom: 0px;">
-    <div class="title-wrapper animate-reveal animate-first">
+    <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
       <div class="title">
         <div>
           <h4>Work</h4>
@@ -85,7 +85,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 
   <div class="full-width" style="background-color: var(--pink); margin-top: 0px; margin-bottom: 0px">
-    <div class="title-wrapper animate-reveal animate-first">
+    <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
       <div class="title">
         <div>
           <h4>Philosophy</h4>
@@ -99,7 +99,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
   </div>
 
   <div class="full-width" style="background-color: var(--orange); margin-top: 0px; margin-bottom: 0px">
-    <div class="title-wrapper animate-reveal animate-first">
+    <div class="title-wrapper animate-reveal animate-first" style="height: 70vh">
       <div class="title">
         <div>
           <h4>Get in touch</h4>
