tweaked hud description

--- a/hud.html
+++ b/hud.html
@@ -52,21 +52,21 @@
 		<div class="context-summary">
 			<h2>Problem</h2>
 			<h3>
-				The client's consumer-facing website was difficult to navigate and visually dated.
+				The client's consumer-facing website was difficult to navigate and visually dated, which degraded user trust for consumers who want reliable information on housing assistance opportunities.
 			</h3>
 			
 			<div class="space"></div>
 			
 			<h2>Solution</h2>
 			<h3>
-				Our team created a clean, modern version of the agency's homepage and a few select high-traffic pages.
+				Our team created a clean, modern version of the agency's homepage and a few select high-traffic pages. We ultimately passed off 4 responsive mockups to a contractor for development.
 			</h3>
 			
 			<div class="space"></div>
-			
-			<h2>Outcome</h2>
+
+			<h2>Role</h2>
 			<h3>
-				We passed off 4 responsive mockups to a contractor for development.
+				I audited the mockups a Visual Designer had created and built + organized over 200 scalable, custom symbols in Sketch. This was 100% UI work.
 			</h3>
 			<div class="space"></div>
 <!-- 			<p>I was brought in to organize and ensure consistency across the work another Visual Designer had already done. I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</p> -->
@@ -84,15 +84,19 @@
 		</div>
 
 		<div class="context-specifics">
-			<h4>Role</h4> 
-			<div class="context-description"><p>I audited the mockups a Visual Designer had created and built + organized over 200 scalable, custom symbols. 100% UI work.</p></div>
+			<h4>Team</h4> 
+			<div class="context-description"><p>Me, Visual Designer, Creative Director, Contractor (Developer)</p></div>
 
 			<h4>Responsibilities</h4> 
 			<div class="context-description"><p>Component Audit, Design Systems, Symbols & Organization</p></div>
 
-			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract</p></div>
+			<h4>Tools</h4>
+			<div class="context-description"><p>Sketch, InVision, Abstract</p></div>
+			
 			<h4>Length</h4>
 			<div class="context-description"><p>2 months</p></div>
+
+
 		</div>
 	</div>
 
