created nonprofit case study with summary

--- a/ef.html
+++ b/ef.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Emily Porat | EF Discovery & Redesign</title>
+	<title>Emily Porat | Health Nonprofit Discovery</title>
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
@@ -35,7 +35,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div id="modal_background">
+<!-- 	<div id="modal_background">
 		<div id="prompt" class="pw_prompt">
 			<h3>Health Nonprofit Discovery</h3>
 			<p>👋 Hey there! I can't talk about this project publicly, so shoot me an <a href="mailto:emporat@gmail.com" target="_blank">email</a> if you'd like to learn more.</p>
@@ -43,79 +43,125 @@
 			<input id="pw_prompt_input1" type="password"></input>
 			<button class="secondary-btn" onclick="checkPassword()">Submit</button>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="full-width" style="background-color: var(--purple);">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
 					<h4>2021 • Deloitte Digital</h4>
-					<h1 style="color: black">Epilepsy Foundation Discovery & Redesign</h1>
+					<h1 style="color: black">Health Nonprofit Discovery</h1>
 				</div>
 			</div>
-		</div>
+		</div> 
 
 		<img src="pics/EF.png" class="big-pic">
 	</div>
 
+
+
 	<div class="panel context">
 		<div class="context-summary">
-			<h2>Context</h2>
+			<h2>Project Overview</h2>
+
 			<h3>
-				I evaluated the overarching user experience of epilepsy.com and provided strategic recommendations that fed into a product roadmap and vision.
+				This client's website has a wealth of information, but users struggle to find what they need and tend to abandon the site quickly. Additionally, the organization is still struggling to reach a large segment of their target audience: individuals living with a particular neurological disorder who want to learn about the condition or get involved with the community.
 			</h3>
-			<div class="short-divider"></div>
-			<p>	
-				EF engaged Deloitte to conduct a comprehensive evaluation of their digital footprint, focusing on their flagship site, epilepsy.com. User Experience, Content Strategy, and Data teams will collaborate to understand EF’s pain points from an organizational, technical, strategic, and end-user perspective with the end goal of providing strategic recommendations for each workstream and an overarching Product Vision and Product Roadmap.
-			</p>
-
+			
+			<div class="space"></div>
+			
+			<h4>Approach</h4>
 			<p>
-				With these goals in mind, I conducted a heuristic evaluation, stakeholder and user interviews, and developed Modes & Mindsets and Journey Maps to illustrate the user experience and inform future design & dev efforts.
+				Our team evaluated the client's digital footprint from a UX, content, and data perspective with the goals of 1) understanding why users can't find what they need and 2) providing strategic recommendations to improve the overarching user experience.
 			</p>
+			
+			<div class="space"></div>
 
-			<p><em>More info coming soon!</em></p>
-
-			<!-- <p><em style="font-weight: 900">X min read time</em></p> -->
+			<h4>Outcome</h4>
+			<p>
+				We delivered a comprehensive report that included all our stakeholder and user research findings and outputs from collaborative Product Visioning + Roadmapping sessions.
+			</p>
 
 		</div>
 
-<!-- 		<div class="context-specifics">
+		<div class="context-specifics">
+			<h4>Team</h4> 
+			<div class="context-description"><p>Me, Junior Designer, Product Manager, Content Strategist, Data Strategists, Engagement Manager</p></div>
+
+			<h4>Responsibilities</h4> 
+			<div class="context-description"><p>I led the UX workstream with minimal support from a senior designer. I presented all design findings to the client and mentored a junior designer.</p></div>
+
+			<h4>Role</h4>
+			<div class="context-description"><p>I led the UX workstream with minimal support from a senior designer. I presented all design findings to the client and mentored a junior designer.</p></div>
+
+			<h4>Tools</h4>
+			<div class="context-description"><p>Mural, PPT</p></div>
+			
 			<h4>Length</h4>
-			<div class="context-description"><p>12 months</p></div>
-			<h4>Team</h4>
-			<div class="context-description"><p>I managed a Jr. UX Designer</p></div>
-			<h4>Skills</h4> 
-			<div class="context-description"><p>Component Audit, Design Systems, Symbols & Organization</p></div>
-			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract</p></div>
-		</div> -->
+			<div class="context-description"><p>3 months</p></div>
+
+
+		</div>
 	</div>
 
-<!-- 	<div class="full-width-mid-page">
-		<div class="panel dark" style="background-color: var(--mediumgray)">
-			<h2 style="padding-top: 5%;">Where we started</h2>
-			<h3 style="padding-left: 15%; padding-right: 15%">There weren't any symbols or text styles. Groups were ad-hoc and most didn't have labels.</h3>
-			<img style="padding-top: 5%" class="pic-left" src="pics/HUD/where-we-started.png">
+	<div class="full-width-mid-page">
+		<div class="panel dark" style="background-color: var(--purple);">
+			<div style="z-index: 2; padding: 10%; position: absolute; width: -webkit-fill-available; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
+				<h4>How might we</h4>
+				<h2 style="color: black">transform insights on organizational challenges and user needs into actionable takeaways?</h2>				
+			</div>
+			<img style="width: 100vw; padding: 0; z-index: 1" class="pic-left" src="pics/Nonprofit/hmw.png">
 		</div>
 	</div>
 
 
 	<div class="panel" id="Component Audit">
-		<h2 class="body right">Component Audit</h2>
+		<h2 class="body right">Process</h2>
 			<div class="body right">
-				<p>My first step was to simply take stock of all the components, text styles, and colors. I started with the initial style guide and built style sheets for each of those areas. I marked off text styles that were used multiple times and noticed that H3 and "Paragraph XL" were both missing. I also found a teal color that was shown in the original style guide but not actually used anywhere throughout the UI. Through this exercise, we were able to remove those unnecessary styles and tighten up the existing ones.
-				</p>
+				<h3>We had 12 weeks and a client with a large appetite for interviews. I owned the following activities:</h3>
+				<ul>
+					<li>Heuristic Evaluation - Usability analysis of key pages on the client's website.</li>
+					<li>Stakeholder Research - Guided conversations with (17 members of) internal leadership and (11) external partners to understand goals, priorities, and challenges.</li>
+					<li>User Research - Guided conversations and usability testing sessions with (16) end users to understand their lived experiences and approach to using the website.</li>
+					<li>Synthesis - Affinity diagramming to pull out key themes</li>
+					<li>Modest & Mindsets + Journey Maps - Approach + experience driven models that will help us understand user needs and prioritize features.</li>
+				</ul>
+			</div>
+	</div>
 
-				<p>Throughout this exercise, I also checked all color combos for contrast accessibility and noted all acceptable pairings for our reference.</p>
+	<div class="panel" id="Component Audit">
+		<h2 class="body right">What We Learned</h2>
+			<div class="body right">
 
-				<img src="pics/HUD/audit.png" class="pic-right">
+				<h3>Usability issues stem from organizational issues</h3>
+				<p>As the organization has grown, its website has not effectively scaled with it. Siloed systems and unclear strategy have prevented departments from forming effective content and data governance processes. This trickles down into every aspect of the end-user web experience, from information overload to the lack of engagement and personalization strategy.</p>
 
-				<p>On the component level, I looked across all pages for inconsistencies and gaps, especially for mobile design. I found some small issues with different shades of gray, type styles for forms, and components that had no mobile counterparts.</p>
+				<img src="pics/Nonprofit/stakeholder.png" class="pic-right">
+				
+				<h3>Information overload hinders understandability and findability</h3>
+				<p>The Information Architecture, navigation components, and Calls to Action are visually confusing and do not match user expectations. There are many inaccessible components across the site (inadequate color contrast or missing labels). Combined with the vast amount of information, the confusing structural organization of the site hinders users’ ability to find what they need efficiently.</p>
 
-				<img src="pics/HUD/audit-components.png" class="pic-right">
+				<img src="pics/Nonprofit/info-overload.png" class="pic-right">
+
+				<h3>To engage, users need to trust the organization</h3>
+				<p>Many end users experience isolation, feeling overwhelmed, and frustrated during their diagnosis process. Most users want to learn about the basics of this health topic, treatment options, and first aid from a science-backed, up-to-date, reliable source. Users who are unfamiliar with the org need to build trust in the organization before committing to getting involved with their time, money, or other resources.</p>
+
+				<img src="pics/Nonprofit/trust.png" class="pic-right">
+
+				<h3>There is no “one size fits all” solution for improving reach and engagement</h3>
+				<p>Getting diagnosed with and treating with this condition is highly personal, variable, and based on one’s access to specialized healthcare, background, trust in doctors, etc. It’s important to acknowledge the inherent health disparities that come with privilege (or lack thereof) – those who need the organization the most may never get engaged due to access barriers and lack of awareness. That's why it was so important to go past demographic-based Personas and delve into highly granular Mindsets, based off characteristic and attributes.</p>
+
+				<img src="pics/Nonprofit/diversity.png" class="pic-right">
+
+			</div>
+	</div>
+
+<!-- 	<div class="panel" id="Component Audit">
+		<h2 class="body right">Executive Summary: What We Learned</h2>
+			<div class="body right">
+
 			</div>
 	</div> -->
-
-
 	  	
   	<div id="footer"></div>
   	</meta>
