--- a/hud.html
+++ b/hud.html
@@ -50,25 +50,25 @@
 
 	<div class="panel context">
 		<div class="context-summary">
-			<h2>Problem</h2>
+			<h2>Project Overview</h2>
 			<h3>
 				The client's consumer-facing website was difficult to navigate and visually dated, which degraded user trust for consumers who want reliable information on housing assistance opportunities.
 			</h3>
 			
 			<div class="space"></div>
 			
-			<h2>Solution</h2>
-			<h3>
+			<h4>Approach</h4>
+			<p>
 				Our team created a clean, modern version of the agency's homepage and a few select high-traffic pages. We ultimately passed off 4 responsive mockups to a contractor for development.
-			</h3>
+			</p>
 			
 			<div class="space"></div>
 
-			<h2>Role</h2>
-			<h3>
-				I audited the mockups a Visual Designer had created and built + organized over 200 scalable, custom symbols in Sketch. This was 100% UI work.
-			</h3>
-			<div class="space"></div>
+			<h4>Outcome</h4>
+			<p>
+				Our team created a clean, modern version of the agency's homepage and a few select high-traffic pages. We ultimately passed off 4 responsive mockups to a contractor for development. 
+			</p>
+
 <!-- 			<p>I was brought in to organize and ensure consistency across the work another Visual Designer had already done. I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</p> -->
 <!-- 			<div class="short-divider"></div>
 			<p>	
@@ -89,6 +89,9 @@
 
 			<h4>Responsibilities</h4> 
 			<div class="context-description"><p>Component Audit, Design Systems, Symbols & Organization</p></div>
+
+			<h4>Role</h4> 
+			<div class="context-description"><p>I audited the mockups a Visual Designer had created and built + organized over 200 scalable, custom symbols in Sketch. This was 100% UI work.</p></div>
 
 			<h4>Tools</h4>
 			<div class="context-description"><p>Sketch, InVision, Abstract</p></div>
